Closed
Bug 596820
Opened 15 years ago
Closed 15 years ago
crash [@ nsMsgAccountManager::RemoveIncomingServer(nsIMsgIncomingServer*, int)]
Categories
(MailNews Core :: Account Manager, defect)
Tracking
(thunderbird3.1 .7-fixed)
RESOLVED
FIXED
Thunderbird 3.3a1
| Tracking | Status | |
|---|---|---|
| thunderbird3.1 | --- | .7-fixed |
People
(Reporter: wsmwk, Assigned: m_kato)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(2 files)
|
888 bytes,
patch
|
Bienvenu
:
review+
standard8
:
superreview-
|
Details | Diff | Splinter Review |
|
2.15 KB,
patch
|
standard8
:
superreview+
standard8
:
approval-thunderbird3.1.7+
|
Details | Diff | Splinter Review |
crash [@ nsMsgAccountManager::RemoveIncomingServer(nsIMsgIncomingServer*, int)]
#37 crash for v3.1.3
bp-8872fe00-c65e-4363-bfef-85a832100909
0 thunderbird.exe nsMsgAccountManager::RemoveIncomingServer mailnews/base/src/nsMsgAccountManager.cpp:489
1 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
2 thunderbird.exe XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2722
3 thunderbird.exe XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1740
4 js3250.dll js_Invoke js/src/jsinterp.cpp:1360
5 js3250.dll js_Interpret js/src/jsops.cpp:2240
6 js3250.dll js_Invoke js/src/jsinterp.cpp:1368
7 js3250.dll js_InternalInvoke js/src/jsinterp.cpp:1423
8 js3250.dll JS_CallFunction js/src/jsapi.cpp:5114
9 thunderbird.exe nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:2177
10 thunderbird.exe nsGlobalWindow::RunTimeout dom/base/nsGlobalWindow.cpp:8164
11 thunderbird.exe nsGlobalWindow::TimerCallback dom/base/nsGlobalWindow.cpp:8498
12 xpcom_core.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:427
13 xpcom_core.dll nsTimerEvent::Run xpcom/threads/nsTimerImpl.cpp:519
14 xpcom_core.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:527
15 xpcom_core.dll NS_ProcessNextEvent_P objdir-tb/mozilla/xpcom/build/nsThreadUtils.cpp:250
16 thunderbird.exe nsXULWindow::ShowModal xpfe/appshell/src/nsXULWindow.cpp:416
17 thunderbird.exe nsContentTreeOwner::ShowAsModal xpfe/appshell/src/nsContentTreeOwner.cpp:528
18 thunderbird.exe nsWindowWatcher::OpenWindowJSInternal embedding/components/windowwatcher/src/nsWindowWatcher.cpp:1010
19 thunderbird.exe nsWindowWatcher::OpenWindowJS embedding/components/windowwatcher/src/nsWindowWatcher.cpp:490
20 thunderbird.exe nsGlobalWindow::OpenInternal dom/base/nsGlobalWindow.cpp:7685
Comment 1•15 years ago
|
||
wsmwk, what did you do, exactly?
Comment 2•15 years ago
|
||
Comments sent from people (wsmwk, please include those!):
trying to set up e-mail account at the time of the crash
------
While setting up new accounr a warning about identity theft game up. While trying to get info from Telstra Aus It crashed
------
I cancelled a dialog for hotmail certificate error (I had my clock set to 2009 instead of 2010, and could see no way to tell it to try again after I fixed the time) when installing Thunderbird for the first time on a new machine
------
attempted connection to Telstra Bigpond email account
| Reporter | ||
Comment 3•15 years ago
|
||
(In reply to comment #1)
> wsmwk, what did you do, exactly?
not my crash/my crashes almost always have comments.
I was probably in hurry filing theh crash leaving work late.
other comments:
Hit "cancel" on setup wizard after getting a prompt to add a security exception for the local mail server (wanted to go back to import the relevant local master CA cert)
-----
context: 1. Thunderbird 2.0 < 2.0.24 was installed 2. Installed 3.0.4 as upgrade 3. del /s %APPDATA%\Roaming\Thunderbird 4. Installed 3.1 RC2 as upgrade what I did: a) Got account setup prompts, entered test user information, retrieved config info from http://autoconfig.csail.mit.edu/mail/config-v1.1.xml b) Clicked (Next?), got Security Warning (server CA certificates are signed by a local CA) c) Left machine for >5 min d) Clicked "Cancel" (want to install local CA before retrying)
bp-32221f28-f79e-4ef9-ae9e-ddb712100609
-----
I find no trunk crashes in last 12 months
| Assignee | ||
Comment 4•15 years ago
|
||
We should check whether first parameter is null by NS_ENSURE_ARG_POINTER(aServer) in RemoveIncomingServer. It can access from script.
Maybe, this.mServer is null in http://mxr.mozilla.org/comm-1.9.2/source/mailnews/base/prefs/content/accountcreation/verifyConfig.js?mark=270-275
| Assignee | ||
Comment 5•15 years ago
|
||
Assignee: nobody → m_kato
| Assignee | ||
Updated•15 years ago
|
Attachment #477457 -
Flags: review?(bienvenu)
Comment 6•15 years ago
|
||
Comment on attachment 477457 [details] [diff] [review]
fix
looks reasonable, thx for the patch.
Attachment #477457 -
Flags: review?(bienvenu) → review+
| Assignee | ||
Updated•15 years ago
|
Attachment #477457 -
Flags: superreview?(bugzilla)
Comment 7•15 years ago
|
||
Comment on attachment 477457 [details] [diff] [review]
fix
If the code you cited is causing this, then I'm not convinced it is quite enough:
http://mxr.mozilla.org/comm-1.9.2/source/mailnews/base/prefs/content/accountcreation/verifyConfig.js?mark=270-275#270
If this.mServer is null, that function will throw, and then the error alert in the function above won't get actioned, which will leave us in a confusing state for the user.
So I think we should have the null check, but also check for not having a null this.mServer in _cleanup.
Attachment #477457 -
Flags: superreview?(bugzilla) → superreview-
Updated•15 years ago
|
status-thunderbird3.1:
--- → wanted
| Assignee | ||
Comment 8•15 years ago
|
||
Attachment #486548 -
Flags: superreview?(bugzilla)
Comment 9•15 years ago
|
||
Comment on attachment 486548 [details] [diff] [review]
patch v2
sr=Standard8, thanks for the patch.
Attachment #486548 -
Flags: superreview?(bugzilla)
Attachment #486548 -
Flags: superreview+
Attachment #486548 -
Flags: approval-thunderbird3.1.7?
Comment 10•15 years ago
|
||
I've pushed this to trunk so we can get some baking prior to 3.1.7 release:
http://hg.mozilla.org/comm-central/rev/de9449535246
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a1
Comment 11•15 years ago
|
||
Comment on attachment 486548 [details] [diff] [review]
patch v2
a=Standard8 for 3.1.7.
I've pushed this to 1.9.2 already as I wanted to trigger some builds there:
http://hg.mozilla.org/releases/comm-1.9.2/rev/4de15e98c774
Attachment #486548 -
Flags: approval-thunderbird3.1.7? → approval-thunderbird3.1.7+
Updated•15 years ago
|
Updated•14 years ago
|
Crash Signature: [@ nsMsgAccountManager::RemoveIncomingServer(nsIMsgIncomingServer*, int)]
You need to log in
before you can comment on or make changes to this bug.
Description
•