Bug 596820 - crash [@ nsMsgAccountManager::RemoveIncomingServer(nsIMsgIncomingServer*, int)]; r=bienvenu sr=Standard8